# booky

./: .env  .gitignore  Cargo.toml  README.md
data/: books.json
migrations/2023-07-17-093014_create_books/: books.db  down.sql  up.sql
src/: app.rs  books.db  database.rs  event.rs  handler.rs  lib.rs  main.rs  reader.rs  ui.rs
src/database/: books.db  models.rs  schema.rs
