[package]
name = "booky"
version = "0.1.0"
authors = ["Aycan <aycan.acn2020@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.20.1" }
tui-textarea = { version = "0.2.0", git = "https://github.com/rhysd/tui-textarea", features = ["ratatui-crossterm"], default-features=false }
dirs-2 = "3.0.1"
int-enum = "0.5.0"
diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"]}
dotenvy = "0.15"
