[package]
name = "booky"
version = "0.1.0"
authors = ["Aycan <aycan.acn2020@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies.crossterm]
version = "*"

[dependencies.tui]
package = "ratatui"
version = "*"

[dependencies.tui-textarea]
git = "https://github.com/rhysd/tui-textarea"
features = ["ratatui-crossterm"]
default-features = false

[dependencies.dirs-2]
version = "*"

[dependencies.int-enum]
version = "*"

[dependencies.diesel]
version = "*"
features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"]

[dependencies.diesel_migrations]
version = "*"

[dependencies.rusqlite]
version = "*"
features = ["bundled"]

[dependencies.chrono]
version = "*"

[dependencies.log]
version = "*"

[dependencies.env_logger]
version = "*"


